# EON-Agent

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: action_executor.py  app.py  environment.py  main.py  models.py  reward.py  scenario_engine.py
server/tasks/: __init__.py  task1_single_fault.py  task2_cascading.py  task3_ambiguous.py
