[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eon-agent"
version = "1.0.0"
description = "EON Agent Production Incident Response Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.0",
    "openai>=1.20.0",
    "httpx>=0.27.0",
    "docker",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
